# temoto_tutorials

./: .gitignore  .gitmodules  README.md
my_temoto_config/my_temoto_config/: CMakeLists.txt  package.xml
my_temoto_config/my_temoto_config/config/: action_dst.yaml  components.yaml  pipes.yaml  robot_description.yaml
my_temoto_config/my_temoto_config/launch/: action_assistant.launch  robotont_sim_driver.launch  temoto.launch  temoto_husky.launch
my_temoto_config/my_temoto_config/src/: component_manager_client.cpp  process_manager_client.cpp  rmi_command_robot.cpp
my_temoto_config/temoto_actions/ta_component_pipe_test/: CMakeLists.txt
my_temoto_config/temoto_actions/ta_component_pipe_test/launch/: invoke_action.launch
my_temoto_config/temoto_actions/ta_component_pipe_test/src/: ta_component_pipe_test.cpp
my_temoto_config/temoto_actions/ta_initialize_robot/src/: ta_initialize_robot.cpp
my_temoto_config/temoto_actions/ta_move_manipulator_eef/include/ta_move_manipulator_eef/: temoto_action.h
my_temoto_config/temoto_actions/ta_move_manipulator_eef/launch/: invoke_action.launch
my_temoto_config/temoto_actions/ta_move_manipulator_eef/src/: ta_move_manipulator_eef.cpp
my_temoto_config/temoto_actions/ta_move_manipulator_eef/test/: ta_move_manipulator_eef.umrfg.json
my_temoto_config/temoto_actions/ta_navigate_robot/src/: ta_navigate_robot.cpp
my_temoto_config/temoto_actions/ta_visualize_robot/: package.xml  umrf.json
my_temoto_config/temoto_actions/ta_visualize_robot/launch/: invoke_action.launch
my_temoto_config/temoto_actions/ta_visualize_robot/src/: ta_visualize_robot.cpp
my_temoto_config/umrf_graphs/: robotont_sim_1_initialize.umrfg.json  robotont_sim_1_nav_cycle.umrfg.json  robotont_sim_2_initialize.umrfg.json  robotont_sim_2_nav_cycle.umrfg.json  start_multi_robotont_navigation.bash
tutorials_temoto_config/temoto_actions/ta_component_pipe_test/: package.xml  umrf.json
tutorials_temoto_config/temoto_actions/ta_component_pipe_test/include/ta_component_pipe_test/: temoto_action.h
tutorials_temoto_config/temoto_actions/ta_component_pipe_test/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_component_pipe_test/test/: ta_component_pipe_test.umrfg.json
tutorials_temoto_config/temoto_actions/ta_fabian_action/: CMakeLists.txt  package.xml  umrf.json
tutorials_temoto_config/temoto_actions/ta_fabian_action/include/ta_fabian_action/: temoto_action.h
tutorials_temoto_config/temoto_actions/ta_fabian_action/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_fabian_action/src/: ta_fabian_action.cpp
tutorials_temoto_config/temoto_actions/ta_fabian_action/test/: ta_fabian_action.umrfg.json
tutorials_temoto_config/temoto_actions/ta_initialize_robot/: CMakeLists.txt  package.xml  umrf.json
tutorials_temoto_config/temoto_actions/ta_initialize_robot/include/ta_initialize_robot/: temoto_action.h
tutorials_temoto_config/temoto_actions/ta_initialize_robot/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_initialize_robot/src/: ta_initialize_robot.cpp
tutorials_temoto_config/temoto_actions/ta_initialize_robot/test/: ta_initialize_robot.umrfg.json
tutorials_temoto_config/temoto_actions/ta_move_manipulator_eef/: CMakeLists.txt  package.xml  umrf.json
tutorials_temoto_config/temoto_actions/ta_move_manipulator_eef/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_move_manipulator_eef/src/: ta_move_manipulator_eef.cpp
tutorials_temoto_config/temoto_actions/ta_navigate_robot/: CMakeLists.txt  package.xml
tutorials_temoto_config/temoto_actions/ta_navigate_robot/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_navigate_robot/src/: ta_navigate_robot.cpp
tutorials_temoto_config/temoto_actions/ta_navigate_robot/test/: ta_navigate_robot.umrfg.json
tutorials_temoto_config/temoto_actions/ta_robot_keyboard_twist/: CMakeLists.txt
tutorials_temoto_config/temoto_actions/ta_robot_keyboard_twist/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_visualize_robot/: CMakeLists.txt
tutorials_temoto_config/temoto_actions/ta_visualize_robot/include/ta_visualize_robot/: temoto_action.h
tutorials_temoto_config/temoto_actions/ta_visualize_robot/launch/: invoke_action.launch
tutorials_temoto_config/temoto_actions/ta_visualize_robot/test/: ta_visualize_robot.umrfg.json
tutorials_temoto_config/tutorials_temoto_config/: CMakeLists.txt  package.xml
tutorials_temoto_config/tutorials_temoto_config/config/: action_dst.yaml  camera_calibration_params.yaml  components.yaml  plugin_description.yaml  robot_description.yaml
tutorials_temoto_config/tutorials_temoto_config/launch/: action_assistant.launch  robotont_sim_combined.launch  robotont_sim_controller.launch  temoto.launch  temoto_husky.launch  usb_cam_remappable.launch
tutorials_temoto_config/tutorials_temoto_config/src/: component_manager_client.cpp  my_navigation_feature.cpp  process_manager_client.cpp  rm_nav_test.cpp  rmi_command_robot.cpp
tutorials_temoto_config/umrf_graphs/: robotont_sim_1_nav_cycle.umrfg.json  robotont_sim_2_initialize.umrfg.json  start_multi_robotont_navigation.bash  stop_multi_robotont.bash  stop_multi_robotont_navigation.bash  vaultbot_initialize.umrfg.json
