<?xml version="1.0"?>
<package format="2">
  <name>ta_visualize_robot</name>
  <version>0.0.0</version>
  <description>The ta_visualize_robot package</description>
  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>>
  <depend>rospy</depend>
  <depend>class_loader</depend>
  <depend>temoto_action_engine</depend>
  <depend>temoto_core</depend>
  <depend>temoto_visualization_manager</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>